angular-course: the-basics done

--- a/frameworks/angular/first-app/src/app/servers/servers.component.html
+++ b/frameworks/angular/first-app/src/app/servers/servers.component.html
@@ -22,5 +22,4 @@
     <span>No server was created!</span>
 </ng-template> -->
 
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let item of servers"></app-server>
