--- a/frameworks/angular/first-app/src/app/app.component.html
+++ b/frameworks/angular/first-app/src/app/app.component.html
@@ -3,8 +3,9 @@
     <div class="col-xs-12">
       <h3>I'm in the AppComponent</h3>
       <hr>
+      <app-practice-directives></app-practice-directives>
       <!-- custom element -->
-       <app-servers></app-servers> 
+       <!-- <app-servers></app-servers>  -->
       <!-- <div app-servers></div> property -->
       <!-- <div class="app-servers"></div> -->
       <!-- <span>Oi</span>
