--- a/frameworks/angular/first-app/src/app/server/server.component.html
+++ b/frameworks/angular/first-app/src/app/server/server.component.html
@@ -1,1 +1,3 @@
-<p>{{ 'server' }} with ID {{ serverId }} is {{ getServerStatus() }}</p>
+<p [ngStyle]="{color: getColor()}" [ngClass]="{online: serverStatus === 'online'}">
+    {{ 'server' }} with ID {{ serverId }} is {{ getServerStatus() }}
+</p>
