--- a/frameworks/angular/first-app/src/app/app.component.html
+++ b/frameworks/angular/first-app/src/app/app.component.html
@@ -3,15 +3,26 @@
     <div class="col-xs-12">
       <h3>I'm in the AppComponent</h3>
       <hr>
+      <h1>Directives Practice</h1>
+      <hr>
       <app-practice-directives></app-practice-directives>
+      <hr>
+      <h1>App Server example</h1>
+      <hr>
       <!-- custom element -->
-       <!-- <app-servers></app-servers>  -->
+      <app-servers></app-servers> 
+      <hr>
       <!-- <div app-servers></div> property -->
       <!-- <div class="app-servers"></div> -->
-      <!-- <span>Oi</span>
+      <h1>Creating own Success and Warning components.</h1>
+      <hr>
+      <span>Oi</span>
       <app-warning-alert></app-warning-alert>
-      <app-success-alert></app-success-alert> -->
-      <!-- <app-practice-databinding></app-practice-databinding> -->
+      <app-success-alert></app-success-alert>
+      <hr>
+      <h1>Databiding Practice</h1>
+      <hr>
+      <app-practice-databinding></app-practice-databinding>
     </div>
   </div>
 </div>
