--- a/frameworks/angular/learn-angular/src/app/app.component.html
+++ b/frameworks/angular/learn-angular/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!-- <app-the-basics-wrapper></app-the-basics-wrapper> -->
-<app-components-databinding-wrapper></app-components-databinding-wrapper>
+<!-- <app-components-databinding-wrapper></app-components-databinding-wrapper> -->
+<app-root-07-directives-deep-dive></app-root-07-directives-deep-dive>
