angular: understanding observables done.

--- a/frameworks/angular/learn-angular/src/app/app.component.html
+++ b/frameworks/angular/learn-angular/src/app/app.component.html
@@ -2,4 +2,5 @@
 <!-- <app-components-databinding-wrapper></app-components-databinding-wrapper> -->
 <!-- <app-root-07-directives-deep-dive></app-root-07-directives-deep-dive> -->
 <!-- <app-root-09-using-services-and-di></app-root-09-using-services-and-di> -->
-<app-root-11-changing-pages-with-routing></app-root-11-changing-pages-with-routing>
+<!-- <app-root-11-changing-pages-with-routing></app-root-11-changing-pages-with-routing> -->
+<app-root-13-understanding-observables></app-root-13-understanding-observables>
