--- a/frameworks/angular/learn-angular/src/app/app.component.html
+++ b/frameworks/angular/learn-angular/src/app/app.component.html
@@ -3,4 +3,5 @@
 <!-- <app-root-07-directives-deep-dive></app-root-07-directives-deep-dive> -->
 <!-- <app-root-09-using-services-and-di></app-root-09-using-services-and-di> -->
 <!-- <app-root-11-changing-pages-with-routing></app-root-11-changing-pages-with-routing> -->
-<app-root-13-understanding-observables></app-root-13-understanding-observables>
+<!-- <app-root-13-understanding-observables></app-root-13-understanding-observables> -->
+ <app-root-15-handling-forms></app-root-15-handling-forms>
