--- a/frameworks/angular/learn-angular/src/app/15-handling-forms/reactive-approach/reactive-approach.component.html
+++ b/frameworks/angular/learn-angular/src/app/15-handling-forms/reactive-approach/reactive-approach.component.html
@@ -1,1 +1,36 @@
-<p>reactive-approach works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+            <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+                <div formGroupName="userData" class="form-group">
+                        <label for="username">Username</label>
+                        <input formControlName="username"
+                            type="text"
+                            id="username"
+                            class="form-control">
+                        <span *ngIf="signupForm.get('userData.username').invalid && signupForm.get('userData.username').touched" 
+                            class="help-block">Please enter a valid username.</span>
+                         
+                        <label for="email">Email</label>
+                        <input formControlName="email"
+                            type="email"
+                            id="email"
+                            class="form-control">
+                        <span *ngIf="signupForm.get('userData.email').invalid && signupForm.get('userData.email').touched" 
+                            class="help-block">Please enter a valid email.</span>
+                </div>
+
+                <div *ngFor="let gender of genders" class="radio">
+                    <label>
+                        <input formControlName="gender"
+                            type="radio" 
+                            [value]="gender"> {{ gender }}
+                    </label>
+                </div>
+                <p *ngIf="signupForm.invalid && signupForm.touched" 
+                        class="help-block">Please enter a valid data.</p>
+                <button class="btn btn-primary" type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
+</div>
