--- a/frameworks/angular/learn-angular/src/app/15-handling-forms/template-driven/template-driven.component.html
+++ b/frameworks/angular/learn-angular/src/app/15-handling-forms/template-driven/template-driven.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form (ngSubmit)="onSubmit(f)" #f="ngForm">
+      <!-- <form (ngSubmit)="onSubmitV1(f)" #f="ngForm"> -->
+      <form (ngSubmit)="onSubmitV2()" #f="ngForm">
         <div
           id="user-data"
           ngModelGroup="userData"
@@ -17,7 +18,7 @@
               required>
           </div>
           <button
-            class="btn btn-default"
+            class="btn btn-primary"
             type="button"
             (click)="suggestUserName()">Suggest an Username</button>
           <div class="form-group">
