--- a/frameworks/angular/learn-angular/src/app/app.component.html
+++ b/frameworks/angular/learn-angular/src/app/app.component.html
@@ -5,4 +5,5 @@
 <!-- <app-root-11-changing-pages-with-routing></app-root-11-changing-pages-with-routing> -->
 <!-- <app-root-13-understanding-observables></app-root-13-understanding-observables> -->
 <!-- <app-root-15-handling-forms></app-root-15-handling-forms> -->
- <app-root-17-pipes></app-root-17-pipes>
+<!-- <app-root-17-pipes></app-root-17-pipes> -->
+<app-root-18-making-http-requests></app-root-18-making-http-requests>
