--- a/frameworks/angular/learn-angular/src/app/18-making-http-requests/root-18-making-http-requests/root-18-making-http-requests.component.html
+++ b/frameworks/angular/learn-angular/src/app/18-making-http-requests/root-18-making-http-requests/root-18-making-http-requests.component.html
@@ -51,13 +51,18 @@
   </div>
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
+      <div *ngIf="error" class="alert alert-danger">
+        <h1>An Error Ocurred!</h1>
+        <p>{{ error }}</p>
+        <button (click)="onHandleError()" class="btn btn-danger">Okay</button>
+      </div>
       <p *ngIf="loadedPosts.length === 0 && !isFetching">No posts available!</p>
+      <p *ngIf="isFetching && !error">Loading...</p>
       <ul *ngIf="loadedPosts.length > 0 && !isFetching" class="list-group">
         <li *ngFor="let post of loadedPosts" class="list-group-item">
           <h3>{{ post.title }}</h3>
           <p>{{ post.content }}</p>
         </li>
-        <p *ngIf="isFetching">Loading...</p>
       </ul>
     </div>
   </div>
